--- a/ProyectCoder/AppCoder/template/curso.html
+++ b/ProyectCoder/AppCoder/template/curso.html
@@ -1,12 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curso</title>
-</head>
-<body>
-    <h1>Curso</h1> 
-</body>
-</html>
+{% extends 'padre.html' %}
+
+{% load static %}
+
+{% block contenidoqueCambia %}
+
+     <h1>Curso</h1>
+
+     <ul>
+        
+        {% for curso in lista_curso %}
+            <li>{{curso.nombre}} - {{curso.camada}}</li>   
+        {% endfor %}
+            
+
+     </ul>
+{% endblock contenidoqueCambia %}
