--- a/ProyectCoder/AppCoder/template/entregables.html
+++ b/ProyectCoder/AppCoder/template/entregables.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Entregables</title>
-</head>
-<body>
-    <h1>Entregables</h1>
-</body> 
-</html>
+{% extends 'padre.html' %}
+
+{% load static %}
+
+{% block contenidoqueCambia %}
+     <h1>Entregables</h1>
+{% endblock contenidoqueCambia %}
