--- a/ProyectCoder/AppCoder/template/estudiantes.html
+++ b/ProyectCoder/AppCoder/template/estudiantes.html
@@ -1,14 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Estudiantes</title>
-</head>
-<body>
+{% extends 'padre.html' %}
 
-    <h1>Estudiantes</h1>
-    
-</body>
-</html>
+{% load static %}
+
+{% block contenidoqueCambia %}
+     <h1>Entregables</h1>
+{% endblock contenidoqueCambia %}
