Agregado de formularios

--- a/ProyectCoder/AppCoder/template/padre.html
+++ b/ProyectCoder/AppCoder/template/padre.html
@@ -28,7 +28,8 @@
                 <a class="navbar-brand" href="{% url 'Cursos' %}">Curso</a>
                 <a class="navbar-brand" href="{% url 'Estudiantes' %}">Estudiante</a>
                 <a class="navbar-brand" href="{% url 'Entregas' %}">Entregable</a>
-                <a class="btn btn-primary" href="#signup">Sign Up</a>
+                <a class="navbar-brand" href="{% url 'CursoFormulario' %}">CursoFormulario</a>
+                <a class="navbar-brand" href="{% url 'BusquedaCamada' %}">BusquedaCamada</a>
             </div>
         </nav>
         <!-- Masthead-->
