Crea,Elimina,Edita

--- a/ProyectCoder/AppCoder/template/profesores.html
+++ b/ProyectCoder/AppCoder/template/profesores.html
@@ -3,5 +3,5 @@
 {% load static %}
 
 {% block contenidoqueCambia %}
-     <h1>Profesores</h1>
+     <h1>Profesores Es una mentira no hacerle caso</h1>
 {% endblock contenidoqueCambia %}
