--- a/ProyectCoder/AppCoder/template/registro.html
+++ b/ProyectCoder/AppCoder/template/registro.html
@@ -4,13 +4,12 @@
 
 {% block contenidoqueCambia %}
 <!--action le decimos la url , method como lo mandamos csrf_token para validar el formulario.-->
-<form action= "{% url 'CreaProfesor' %}" method='POST' >{% csrf_token %} 
-
+<form action= "{% url 'Registrar' %}" method="POST" >{% csrf_token %} 
+    
     {{miformulario.as_p}}
-    {{userform.as_p}}
     
      <!--Generamos el boton de envio.-->
-    <input type="submit" value="Crear"/>
+    <input type="submit" value="Crear usuario"/>
 </form>
 {% endblock contenidoqueCambia %}
  
