--- a/ProyectCoder/AppCoder/template/editarPerfil.html
+++ b/ProyectCoder/AppCoder/template/editarPerfil.html
@@ -4,13 +4,14 @@
 
 {% block contenidoqueCambia %}
 <!--action le decimos la url , method como lo mandamos csrf_token para validar el formulario.-->
-<form action= "{% url 'CreaProfesor' %}" method='POST' >{% csrf_token %} 
+<form method="POST" >{% csrf_token %} 
 
-    {{miformulario.as_p}}
-    {{userform.as_p}}
+    {{miFormulario.as_p}}
     
+    {{mensaje}}
      <!--Generamos el boton de envio.-->
-    <input type="submit" value="Crear"/>
+    <input type="submit" value="Actualizar"/>
+    
 </form>
 {% endblock contenidoqueCambia %}
- 
+ s
