--- a/ProyectCoder/AppCoder/template/inicio.html
+++ b/ProyectCoder/AppCoder/template/inicio.html
@@ -5,4 +5,6 @@
 {% block contenidoqueCambia %}
      <h1>Vista de inicio</h1>
     <h4>Bienvenido a Coder</h4>
+    <h3>{{mensaje}}</h3>
+    <img src="{{url}}" alt="avatar">
 {% endblock contenidoqueCambia %}
